--- a/index.html
+++ b/index.html
@@ -120,9 +120,9 @@
                     <h4>Aimi Misman</h4>
                     <p class="text-muted">Founder & CTO</p>
                     <p class="text-muted">Visionary technology leader with a proven track record in software development, project management, and business strategy. Expertise in guiding cross-functional teams, defining technical requirements, and integrating cutting-edge software with IoT devices. As a strong communicator and strategic thinker, consistently delivers high-quality, innovative solutions that align with business objectives and drive growth. Passionate about leveraging technology to transform ideas into impactful products in fast-paced, dynamic environments.</p>
-                    <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Aimi Misman Twitter Profile"><i class="fab fa-twitter"></i></a>
+                    <!-- <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Aimi Misman Twitter Profile"><i class="fab fa-twitter"></i></a>
                     <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Aimi Misman Facebook Profile"><i class="fab fa-facebook-f"></i></a>
-                    <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Aimi Misman LinkedIn Profile"><i class="fab fa-linkedin-in"></i></a>
+                    <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Aimi Misman LinkedIn Profile"><i class="fab fa-linkedin-in"></i></a> -->
                 </div>
             </div>
             <div class="col-lg-6">
@@ -131,9 +131,9 @@
                     <h4>Sherman Foo</h4>
                     <p class="text-muted">Co-founder & Advisor</p>
                     <p class="text-muted">Since 2007, Sherman transitioned from a regional MNC role to the startup scene, co-founding a now globally recognized portable audio innovation. This bootstrap venture reached $30 million in revenue and a presence in over 100 countries within four years, later valued at $1 billion by Forbes. He has since won numerous awards and achieved success as a managing partner at several agencies, published author, venture capitalist, restauranteur, regional consultant, business advisor, and speaker. Since 2016, Sherman has also served on the boards of various ventures across industries such as investments, IPO development, e-commerce, consumer services, digital tech, and F&B.</p>
-                    <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Sherman Foo Twitter Profile"><i class="fab fa-twitter"></i></a>
+                    <!-- <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Sherman Foo Twitter Profile"><i class="fab fa-twitter"></i></a>
                     <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Sherman Foo Facebook Profile"><i class="fab fa-facebook-f"></i></a>
-                    <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Sherman Foo LinkedIn Profile"><i class="fab fa-linkedin-in"></i></a>
+                    <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Sherman Foo LinkedIn Profile"><i class="fab fa-linkedin-in"></i></a> -->
                 </div>
             </div>
         </div>
@@ -201,13 +201,13 @@
                 <div class="row align-items-center">
                     <div class="col-lg-4 text-lg-start">Copyright &copy; KEBOON 2024</div>
                     <div class="col-lg-4 my-3 my-lg-0">
-                        <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
+                        <!--<a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
                         <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
-                        <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
+                        <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a> -->
                     </div>
                     <div class="col-lg-4 text-lg-end">
-                        <a class="link-dark text-decoration-none me-3" href="#!">Privacy Policy</a>
-                        <a class="link-dark text-decoration-none" href="#!">Terms of Use</a>
+                       <!-- <a class="link-dark text-decoration-none me-3" href="#!">Privacy Policy</a>
+                        <a class="link-dark text-decoration-none" href="#!">Terms of Use</a> -->
                     </div>
                 </div>
             </div>
