remove unnecessary stuff

--- a/index.html
+++ b/index.html
@@ -150,7 +150,6 @@
     <div class="container">
         <div class="text-center">
             <h2 class="section-heading text-uppercase">Contact Us</h2>
-            <h3 class="section-subheading text-muted">Get in touch with Keboon</h3>
         </div>
         <div class="row align-items-stretch mb-5">
             <div class="col-md-4">
@@ -205,8 +204,8 @@
                     <a class="btn btn-dark btn-social mx-2" href="https://facebook.com/keboon.tech" aria-label="Keboon Facebook Profile"><i class="fab fa-facebook-f"></i></a>
                     <a class="btn btn-dark btn-social mx-2" href="https://linkedin.com/company/keboon-tech/" aria-label="Keboon LinkedIn Profile"><i class="fab fa-linkedin-in"></i></a>
             <div class="col-lg-4 text-lg-end">
-                <a class="link-dark text-decoration-none me-3" href="#!">Privacy Policy</a>
-                <a class="link-dark text-decoration-none" href="#!">Terms of Use</a>
+              <!--  <a class="link-dark text-decoration-none me-3" href="#!">Privacy Policy</a>
+                <a class="link-dark text-decoration-none" href="#!">Terms of Use</a> -->
             </div>
         </div>
     </div>
