--- a/index.html
+++ b/index.html
@@ -196,15 +196,18 @@
 
 <footer class="footer py-4">
     <div class="container">
-        <div class="row align-items-center">
-            <div class="col-lg-4 text-lg-start">
+        <div class="row align-items-center justify-content-between">
+            <div class="col-lg-4 text-center text-lg-start mb-3 mb-lg-0">
                 Copyright © KEBOON 2024
             </div>
-            <a class="btn btn-dark btn-social mx-2" href="https://instagram.com/keboon.tech" aria-label="Keboon Instagram Profile"><i class="fab fa-instagram"></i></a>
-                    <a class="btn btn-dark btn-social mx-2" href="https://facebook.com/keboon.tech" aria-label="Keboon Facebook Profile"><i class="fab fa-facebook-f"></i></a>
-                    <a class="btn btn-dark btn-social mx-2" href="https://linkedin.com/company/keboon-tech/" aria-label="Keboon LinkedIn Profile"><i class="fab fa-linkedin-in"></i></a>
-            <div class="col-lg-4 text-lg-end">
-              <!--  <a class="link-dark text-decoration-none me-3" href="#!">Privacy Policy</a>
+            <div class="col-lg-4 d-flex justify-content-center mb-3 mb-lg-0">
+                <a class="btn btn-dark btn-social mx-2" href="https://instagram.com/keboon.tech" aria-label="Keboon Instagram Profile" target="_blank" rel="noopener noreferrer"><i class="fab fa-instagram"></i></a>
+                <a class="btn btn-dark btn-social mx-2" href="https://facebook.com/keboon.tech" aria-label="Keboon Facebook Profile" target="_blank" rel="noopener noreferrer"><i class="fab fa-facebook-f"></i></a>
+                <a class="btn btn-dark btn-social mx-2" href="https://linkedin.com/company/keboon-tech/" aria-label="Keboon LinkedIn Profile" target="_blank" rel="noopener noreferrer"><i class="fab fa-linkedin-in"></i></a>
+            </div>
+            <div class="col-lg-4 text-center text-lg-end">
+                <!-- Uncomment these lines if you want to add Privacy Policy and Terms of Use links -->
+                <!-- <a class="link-dark text-decoration-none me-3" href="#!">Privacy Policy</a>
                 <a class="link-dark text-decoration-none" href="#!">Terms of Use</a> -->
             </div>
         </div>
