--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
     <div class="container">
         <div class="row align-items-center justify-content-between">
             <div class="col-lg-4 text-center text-lg-start mb-3 mb-lg-0">
-                Copyright © KEBOON 2024
+                Copyright © KEBOON TECHNOLOGY SOLUTION (003639101-D 2024)
             </div>
             <div class="col-lg-4 d-flex justify-content-center mb-3 mb-lg-0">
                 <a class="btn btn-dark btn-social mx-2" href="https://instagram.com/keboon.tech" aria-label="Keboon Instagram Profile" target="_blank" rel="noopener noreferrer"><i class="fab fa-instagram"></i></a>
