--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
             <div class="col-lg-4 text-center text-lg-start mb-3 mb-lg-0">
                 Copyright © KEBOON TECHNOLOGY SOLUTION 
                 <br />
-                (003639101-D 2024)
+                Business RN: 003639101-D
             </div>
             <div class="col-lg-4 d-flex justify-content-center mb-3 mb-lg-0">
                 <a class="btn btn-dark btn-social mx-2" href="https://instagram.com/keboon.tech" aria-label="Keboon Instagram Profile" target="_blank" rel="noopener noreferrer"><i class="fab fa-instagram"></i></a>
