--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                 <div class="team-member">
                     <img class="mx-auto rounded-circle" src="assets/img/team/sherman_foo.jpg" alt="Sherman Foo" />
                     <h4>Sherman Foo</h4>
-                    <p class="text-muted">Co-founder & Advisor</p>
+                    <p class="text-muted">Advisor</p>
                     <p class="text-muted">Since 2007, Sherman transitioned from a regional MNC role to the startup scene, co-founding a now globally recognized portable audio innovation. This bootstrap venture reached $30 million in revenue and a presence in over 100 countries within four years, later valued at $1 billion by Forbes. He has since won numerous awards and achieved success as a managing partner at several agencies, published author, venture capitalist, restauranteur, regional consultant, business advisor, and speaker. Since 2016, Sherman has also served on the boards of various ventures across industries such as investments, IPO development, e-commerce, consumer services, digital tech, and F&B.</p>
                     <!-- <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Sherman Foo Twitter Profile"><i class="fab fa-twitter"></i></a>
                     <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Sherman Foo Facebook Profile"><i class="fab fa-facebook-f"></i></a>
