--- a/index.html
+++ b/index.html
@@ -385,6 +385,48 @@
         </div>
     </section>
 
+    <section id="contact" class="py-5 bg-light">
+        <div class="container">
+            <h2 class="text-center mb-4">Contact Us</h2>
+            <div class="row">
+                <div class="col-md-6 mb-4">
+                    <div class="card h-100">
+                        <div class="card-body">
+                            <h4 class="card-title">Get in Touch</h4>
+                            <p class="card-text">We're excited to hear from potential investors, partners, or anyone interested in joining our sustainable food movement.</p>
+                            <ul class="list-unstyled">
+                                <li class="mb-2"><i class="fas fa-map-marker-alt text-keboon-green me-2"></i>Kuala Lumpur, Malaysia</li>
+                                <li class="mb-2"><i class="fas fa-envelope text-keboon-green me-2"></i><a href="mailto:aimi@keboon.net">aimi@keboon.net</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6 mb-4">
+                    <div class="card h-100">
+                        <div class="card-body">
+                            <h4 class="card-title">Send Us a Message</h4>
+                            <form id="contactForm" action="https://formspree.io/f/xzzpopkr" method="POST">
+                                <div class="mb-3">
+                                    <label for="name" class="form-label">Your Name</label>
+                                    <input type="text" class="form-control" id="name" name="name" required>
+                                </div>
+                                <div class="mb-3">
+                                    <label for="email" class="form-label">Your Email</label>
+                                    <input type="email" class="form-control" id="email" name="email" required>
+                                </div>
+                                <div class="mb-3">
+                                    <label for="message" class="form-label">Your Message</label>
+                                    <textarea class="form-control" id="message" name="message" rows="4" required></textarea>
+                                </div>
+                                <button type="submit" class="btn btn-keboon-green text-white">Send Message</button>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <footer class="bg-dark text-white text-center py-3">
         <div class="container">
             <p>&copy; 2024 Keboon Technology Solution. All rights reserved. | Business RN: 003639101-D</p>
