--- a/index.html
+++ b/index.html
@@ -385,40 +385,49 @@
         </div>
     </section>
 
-    <section id="contact" class="py-5 bg-light">
+    <section id="contact" class="page-section bg-light">
         <div class="container">
-            <h2 class="text-center mb-4">Contact Us</h2>
-            <div class="row">
-                <div class="col-md-6 mb-4">
+            <div class="text-center">
+                <h2 class="section-heading text-uppercase">Contact Us</h2>
+                <h3 class="section-subheading text-muted">Get in touch with the Keboon team</h3>
+            </div>
+            <div class="row align-items-stretch mb-5">
+                <div class="col-md-6">
                     <div class="card h-100">
                         <div class="card-body">
-                            <h4 class="card-title">Get in Touch</h4>
+                            <h4 class="card-title">Reach Out to Us</h4>
                             <p class="card-text">We're excited to hear from potential investors, partners, or anyone interested in joining our sustainable food movement.</p>
                             <ul class="list-unstyled">
-                                <li class="mb-2"><i class="fas fa-map-marker-alt text-keboon-green me-2"></i>Kuala Lumpur, Malaysia</li>
-                                <li class="mb-2"><i class="fas fa-envelope text-keboon-green me-2"></i><a href="mailto:aimi@keboon.net">aimi@keboon.net</a></li>
+                                <li class="mb-2"><i class="fas fa-map-marker-alt text-primary me-2"></i>Kuala Lumpur, Malaysia</li>
+                                <li class="mb-2"><i class="fas fa-envelope text-primary me-2"></i><a href="mailto:aimi@keboon.net">aimi@keboon.net</a></li>
                             </ul>
+                            <div class="mt-4">
+                                <a href="https://instagram.com/keboon.tech" class="btn btn-dark btn-social mx-2" target="_blank" rel="noopener noreferrer"><i class="fab fa-instagram"></i></a>
+                                <a href="https://facebook.com/keboon.tech" class="btn btn-dark btn-social mx-2" target="_blank" rel="noopener noreferrer"><i class="fab fa-facebook-f"></i></a>
+                                <a href="https://linkedin.com/company/keboon-tech/" class="btn btn-dark btn-social mx-2" target="_blank" rel="noopener noreferrer"><i class="fab fa-linkedin-in"></i></a>
+                            </div>
                         </div>
                     </div>
                 </div>
-                <div class="col-md-6 mb-4">
+                <div class="col-md-6">
                     <div class="card h-100">
                         <div class="card-body">
                             <h4 class="card-title">Send Us a Message</h4>
                             <form id="contactForm" action="https://formspree.io/f/xzzpopkr" method="POST">
-                                <div class="mb-3">
-                                    <label for="name" class="form-label">Your Name</label>
-                                    <input type="text" class="form-control" id="name" name="name" required>
+                                <div class="form-group mb-3">
+                                    <input class="form-control" type="text" placeholder="Your Name *" required="required" name="name" />
                                 </div>
-                                <div class="mb-3">
-                                    <label for="email" class="form-label">Your Email</label>
-                                    <input type="email" class="form-control" id="email" name="email" required>
+                                <div class="form-group mb-3">
+                                    <input class="form-control" type="email" placeholder="Your Email *" required="required" name="email" />
                                 </div>
-                                <div class="mb-3">
-                                    <label for="message" class="form-label">Your Message</label>
-                                    <textarea class="form-control" id="message" name="message" rows="4" required></textarea>
+                                <div class="form-group mb-3">
+                                    <textarea class="form-control" placeholder="Your Message *" required="required" name="message"></textarea>
                                 </div>
-                                <button type="submit" class="btn btn-keboon-green text-white">Send Message</button>
+                                <div class="text-center">
+                                    <button class="btn btn-primary btn-xl text-uppercase" type="submit">
+                                        <i class="fas fa-paper-plane me-2"></i>Send Message
+                                    </button>
+                                </div>
                             </form>
                         </div>
                     </div>
@@ -430,11 +439,6 @@
     <footer class="bg-dark text-white text-center py-3">
         <div class="container">
             <p>&copy; 2024 Keboon Technology Solution. All rights reserved. | Business RN: 003639101-D</p>
-            <div class="mt-3">
-                <a href="https://instagram.com/keboon.tech" class="text-white me-3" target="_blank" rel="noopener noreferrer"><i class="fab fa-instagram"></i></a>
-                <a href="https://facebook.com/keboon.tech" class="text-white me-3" target="_blank" rel="noopener noreferrer"><i class="fab fa-facebook-f"></i></a>
-                <a href="https://linkedin.com/company/keboon-tech/" class="text-white" target="_blank" rel="noopener noreferrer"><i class="fab fa-linkedin-in"></i></a>
-            </div>
         </div>
     </footer>
 
