update to include pitch

--- a/index.html
+++ b/index.html
@@ -24,9 +24,8 @@
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav text-uppercase ms-auto py-4 py-lg-0">
                     <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#features">Features</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#benefits">Benefits</a></li>
                     <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#pitch">Pitch Deck</a></li>
                     <li class="nav-item"><a class="nav-link" href="https://app.keboon.net">Keboon App</a></li>
                 </ul>
             </div>
@@ -168,7 +167,7 @@
     </section>
 
      <!-- Download Pitch Deck -->
-     <section class="page-section bg-light" id="download">
+     <section id="pitch" class="page-section bg-light" id="download">
         <div class="container">
             <div class="text-center">
                 <h2 class="section-heading text-uppercase">Download Our Pitch Deck</h2>
