--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <div class="container">
             <div class="text-center">
                 <h2 class="section-heading text-uppercase">About Keboon</h2>
-                <h3 class="section-subheading text-muted">Revolutionizing local food ecosystems</h3>
+                <h3 class="section-subheading text-muted">Keboon is An innovative online marketplace connecting local producers with consumers, reducing food waste and promoting sustainable local food ecosystems.</h3>
             </div>
             <div class="row text-center">
                 <div class="col-md-4">
@@ -172,7 +172,7 @@
             <div class="text-center">
                 <h2 class="section-heading text-uppercase">Download Our Pitch Deck</h2>
                 <h3 class="section-subheading text-muted">Learn more about Keboon's vision and business model</h3>
-                <a href="keboon-pitch-deck.html" class="btn btn-primary btn-xl text-uppercase" download>Download Pitch Deck</a>
+                <a href="Keboon-Pitch.pdf" class="btn btn-primary btn-xl text-uppercase" download>Download Pitch Deck</a>
             </div>
         </div>
     </section>
