update pitch deck

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
             <div class="text-center">
                 <h2 class="section-heading text-uppercase">Download Our Pitch Deck</h2>
                 <h3 class="section-subheading text-muted">Learn more about Keboon's vision and business model</h3>
-                <a href="Keboon-Pitch.pdf" class="btn btn-primary btn-xl text-uppercase" download>Download Pitch Deck</a>
+                <a href="Keboon-Pitch.html" class="btn btn-primary btn-xl text-uppercase" download>Download Pitch Deck</a>
             </div>
         </div>
     </section>
