--- a/index.html
+++ b/index.html
@@ -177,6 +177,32 @@
         </div>
     </section>
 
+    <section class="page-section bg-light" id="team">
+        <div class="container">
+            <div class="text-center">
+                <h2 class="section-heading text-uppercase">Our Team</h2>
+                <h3 class="section-subheading text-muted">The minds behind Keboon</h3>
+            </div>
+            <div class="row">
+                <div class="col-lg-6">
+                    <div class="team-member">
+                        <img class="mx-auto rounded-circle" src="assets/img/team/aimi_misman.jpg" alt="Aimi Misman" />
+                        <h4>Aimi Misman</h4>
+                        <p class="text-muted">Founder & CTO</p>
+                        <p>A passionate advocate for sustainable living and local economies, Aimi is the driving force behind Keboon, a platform dedicated to connecting home growers and producers with their neighbors and consumers. With a deep commitment to leveraging technology for social good, she envisions a world where communities thrive through access to fresh, locally-sourced produce, reducing carbon footprints, and fostering resilience in local economies. As a visionary technology leader, she combines her expertise in software development, project management, and business strategy to turn this vision into reality. She is skilled in guiding cross-functional teams and integrating innovative solutions that align with Keboon's mission. Her work is not just about creating software—it's about making a lasting, positive impact on how people connect, consume, and support their local communities. She believes that through technology, we can empower individuals to contribute to a healthier planet and a more connected society.</p>
+                    </div>
+                </div>
+                <div class="col-lg-6">
+                    <div class="team-member">
+                        <img class="mx-auto rounded-circle" src="assets/img/team/sherman_foo.jpg" alt="Sherman Foo" />
+                        <h4>Sherman Foo</h4>
+                        <p class="text-muted">Advisor</p>
+                        <p>Since 2007, Sherman transitioned from a regional MNC role to the startup scene, co-founding a now globally recognized portable audio innovation. This bootstrap venture reached $30 million in revenue and a presence in over 100 countries within four years, later valued at $1 billion by Forbes. He has since won numerous awards and achieved success as a managing partner at several agencies, published author, venture capitalist, restauranteur, regional consultant, business advisor, and speaker. Since 2016, Sherman has also served on the boards of various ventures across industries such as investments, IPO development, e-commerce, consumer services, digital tech, and F&B.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     
     <section id="contact" class="page-section bg-light">
         <div class="container">
