--- a/index.html
+++ b/index.html
@@ -77,94 +77,64 @@
         </div>
     </section>
 
-    <!-- Features -->
-    <section class="page-section bg-light" id="features">
-        <div class="container">
-            <div class="text-center">
-                <h2 class="section-heading text-uppercase">Key Features</h2>
-                <h3 class="section-subheading text-muted">Discover what makes Keboon unique</h3>
-            </div>
-            <div class="row text-center">
-                <div class="col-md-4">
-                    <span class="fa-stack fa-4x">
-                        <i class="fas fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fas fa-map-marker-alt fa-stack-1x fa-inverse"></i>
-                    </span>
-                    <h4 class="my-3">Geolocation</h4>
-                    <p class="text-muted">Find nearby produce with ease using our advanced location-based search.</p>
+    <!-- Problem -->
+<section class="page-section" id="problem">
+    <div class="container">
+        <ul class="timeline">
+            <li>
+                <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/1.jpg" alt="Problem" /></div>
+                <div class="timeline-panel">
+                    <div class="timeline-heading">
+                        <h4>The Problem</h4>
+                        <h4 class="subheading">Excess Produce Waste</h4>
+                    </div>
+                    <div class="timeline-body"><p class="text-muted">Excess home-grown produce often goes to waste, despite efforts to share with neighbors. Not everyone has the time or network to effectively distribute their surplus.</p></div>
                 </div>
-                <div class="col-md-4">
-                    <span class="fa-stack fa-4x">
-                        <i class="fas fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fas fa-wallet fa-stack-1x fa-inverse"></i>
-                    </span>
-                    <h4 class="my-3">Secure Payments</h4>
-                    <p class="text-muted">Integrated wallet system for safe and easy transactions between buyers and sellers.</p>
+            </li>
+            <li class="timeline-inverted">
+                <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/2.jpg" alt="Solution" /></div>
+                <div class="timeline-panel">
+                    <div class="timeline-heading">
+                        <h4>Our Solution</h4>
+                        <h4 class="subheading">Keboon Marketplace</h4>
+                    </div>
+                    <div class="timeline-body"><p class="text-muted">Keboon is an innovative online marketplace designed to connect local producers with consumers, providing a platform to sell surplus home-grown produce and buy fresh, organic, locally-sourced products.</p></div>
                 </div>
-                <div class="col-md-4">
-                    <span class="fa-stack fa-4x">
-                        <i class="fas fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fas fa-check-circle fa-stack-1x fa-inverse"></i>
-                    </span>
-                    <h4 class="my-3">Quality Assurance</h4>
-                    <p class="text-muted">Verified listings and user reviews ensure high-quality produce and trustworthy transactions.</p>
+            </li>
+            <li>
+                <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/3.jpg" alt="Mission" /></div>
+                <div class="timeline-panel">
+                    <div class="timeline-heading">
+                        <h4>Our Mission</h4>
+                        <h4 class="subheading">Sustainable Local Food Ecosystem</h4>
+                    </div>
+                    <div class="timeline-body"><p class="text-muted">We're committed to reducing food waste, supporting local farmers and gardeners, promoting the consumption of fresh, organic produce, and strengthening community bonds through the sharing of locally-grown food.</p></div>
                 </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- Benefits -->
-    <section class="page-section" id="benefits">
-        <div class="container">
-            <div class="text-center">
-                <h2 class="section-heading text-uppercase">Benefits</h2>
-                <h3 class="section-subheading text-muted">Why choose Keboon?</h3>
-            </div>
-            <ul class="timeline">
-                <li>
-                    <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/1.jpg" alt="Fresh Produce" /></div>
-                    <div class="timeline-panel">
-                        <div class="timeline-heading">
-                            <h4>For Consumers</h4>
-                            <h4 class="subheading">Access to Fresh, Local Produce</h4>
-                        </div>
-                        <div class="timeline-body"><p class="text-muted">Enjoy organic, locally-sourced fruits and vegetables at competitive prices.</p></div>
+            </li>
+            <li class="timeline-inverted">
+                <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/4.jpg" alt="Features" /></div>
+                <div class="timeline-panel">
+                    <div class="timeline-heading">
+                        <h4>Key Features</h4>
+                        <h4 class="subheading">Empowering Producers and Consumers</h4>
                     </div>
-                </li>
-                <li class="timeline-inverted">
-                    <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/2.jpg" alt="Local Farmers" /></div>
-                    <div class="timeline-panel">
-                        <div class="timeline-heading">
-                            <h4>For Producers</h4>
-                            <h4 class="subheading">Monetize Your Surplus</h4>
-                        </div>
-                        <div class="timeline-body"><p class="text-muted">Turn excess produce into profit and reduce waste from your garden or farm.</p></div>
-                    </div>
-                </li>
-                <li>
-                    <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/3.jpg" alt="Community" /></div>
-                    <div class="timeline-panel">
-                        <div class="timeline-heading">
-                            <h4>For Communities</h4>
-                            <h4 class="subheading">Stronger Local Connections</h4>
-                        </div>
-                        <div class="timeline-body"><p class="text-muted">Foster a sense of community and support local food ecosystems.</p></div>
-                    </div>
-                </li>
-                <li class="timeline-inverted">
-                    <div class="timeline-image">
-                        <h4>
-                            Be Part
-                            <br />
-                            Of Our
-                            <br />
-                            Story!
-                        </h4>
-                    </div>
-                </li>
-            </ul>
-        </div>
-    </section>
+                    <div class="timeline-body"><p class="text-muted">Keboon offers a user-friendly platform for producers to easily list and sell surplus produce, while consumers can browse and buy fresh, local products. We're building a community of individuals passionate about sustainable, locally-grown food.</p></div>
+                </div>
+            </li>
+            <li class="timeline-inverted">
+                <div class="timeline-image">
+                    <h4>
+                        Join Our
+                        <br />
+                        Sustainable
+                        <br />
+                        Movement!
+                    </h4>
+                </div>
+            </li>
+        </ul>
+    </div>
+</section>
 
      <!-- Download Pitch Deck -->
      <section id="pitch" class="page-section bg-light" id="download">
@@ -180,7 +150,7 @@
     <section class="page-section bg-light" id="team">
         <div class="container">
             <div class="text-center">
-                <h2 class="section-heading text-uppercase">Our Team</h2>
+                <h2 class="section-heading text-uppercase">Our Amazing Team</h2>
                 <h3 class="section-subheading text-muted">The minds behind Keboon</h3>
             </div>
             <div class="row">
@@ -236,15 +206,23 @@
     
     
 
-    <!-- Footer-->
     <footer class="footer py-4">
         <div class="container">
-            <div class="row align-items-center">
-                <div class="col-lg-4 text-lg-start">Copyright &copy; Keboon Technology Solution 2024</div>
-                <div class="col-lg-4 text-lg-center">
-                    <a href="https://instagram.com/keboon.tech" class="btn btn-dark btn-social mx-2" target="_blank" rel="noopener noreferrer"><i class="fab fa-instagram"></i></a>
-                    <a href="https://facebook.com/keboon.tech" class="btn btn-dark btn-social mx-2" target="_blank" rel="noopener noreferrer"><i class="fab fa-facebook-f"></i></a>
-                    <a href="https://linkedin.com/company/keboon-tech/" class="btn btn-dark btn-social mx-2" target="_blank" rel="noopener noreferrer"><i class="fab fa-linkedin-in"></i></a>
+            <div class="row align-items-center justify-content-between">
+                <div class="col-lg-4 text-center text-lg-start mb-3 mb-lg-0">
+                    Copyright © KEBOON TECHNOLOGY SOLUTION 
+                    <br />
+                    Business RN: 003639101-D
+                </div>
+                <div class="col-lg-4 d-flex justify-content-center mb-3 mb-lg-0">
+                    <a class="btn btn-dark btn-social mx-2" href="https://instagram.com/keboon.tech" aria-label="Keboon Instagram Profile" target="_blank" rel="noopener noreferrer"><i class="fab fa-instagram"></i></a>
+                    <a class="btn btn-dark btn-social mx-2" href="https://facebook.com/keboon.tech" aria-label="Keboon Facebook Profile" target="_blank" rel="noopener noreferrer"><i class="fab fa-facebook-f"></i></a>
+                    <a class="btn btn-dark btn-social mx-2" href="https://linkedin.com/company/keboon-tech/" aria-label="Keboon LinkedIn Profile" target="_blank" rel="noopener noreferrer"><i class="fab fa-linkedin-in"></i></a>
+                </div>
+                <div class="col-lg-4 text-center text-lg-end">
+                    <!-- Uncomment these lines if you want to add Privacy Policy and Terms of Use links -->
+                    <!-- <a class="link-dark text-decoration-none me-3" href="#!">Privacy Policy</a>
+                    <a class="link-dark text-decoration-none" href="#!">Terms of Use</a> -->
                 </div>
             </div>
         </div>
