Add pitch options

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
             <h3 class="section-subheading text-muted">Learn more about Keboon's vision and business model</h3>
             <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
                 <a href="keboon-pitch.html" class="btn btn-primary btn-xl text-uppercase mb-2" download>Summarised Pitch</a>
-                <a href="keboon-pitch.pdf" class="btn btn-primary btn-xl text-uppercase mb-2" download>Detailed Pitch</a>
+                <a href="Keboon-Pitch.pdf" class="btn btn-primary btn-xl text-uppercase mb-2" download>Detailed Pitch</a>
             </div>
         </div>
     </div>
