--- a/index.html
+++ b/index.html
@@ -136,19 +136,20 @@
     </div>
 </section>
 
-     <!-- Download Pitch Deck -->
+<!-- Download Pitch Deck -->
 <section id="pitch" class="page-section bg-light" id="download">
     <div class="container">
         <div class="text-center">
             <h2 class="section-heading text-uppercase">Download Our Pitch Deck</h2>
             <h3 class="section-subheading text-muted">Learn more about Keboon's vision and business model</h3>
             <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
-                <a href="keboon-pitch.html" class="btn btn-primary btn-xl text-uppercase mb-2" download>Summarised Pitch</a>
-                <a href="Keboon-Pitch.pdf" class="btn btn-primary btn-xl text-uppercase mb-2" download>Detailed Pitch</a>
+                <a href="keboon-pitch.html" class="btn btn-primary btn-xl text-uppercase mb-2" target="_blank">Summarised Pitch</a>
+                <a href="Keboon-Pitch.pdf" class="btn btn-primary btn-xl text-uppercase mb-2" target="_blank">Detailed Pitch</a>
             </div>
         </div>
     </div>
 </section>
+
 
 
     <section class="page-section bg-light" id="team">
