--- a/index.html
+++ b/index.html
@@ -136,6 +136,36 @@
     </div>
 </section>
 
+<section class="page-section bg-light" id="survey">
+    <div class="container">
+        <div class="text-center">
+            <h2 class="section-heading text-uppercase">Help Shape the Future of Local Produce Shopping!</h2>
+            <h3 class="section-subheading text-muted mb-5">Your input is invaluable in creating an app that truly serves your needs.</h3>
+        </div>
+        <div class="row justify-content-center">
+            <div class="col-lg-8 col-xl-7">
+                <div class="card shadow border-0">
+                    <div class="card-body p-5">
+                        <h4 class="card-title mb-4">In this quick 5-minute survey, you'll share your thoughts on:</h4>
+                        <ul class="list-unstyled mb-4">
+                            <li class="mb-2"><i class="fas fa-check text-primary me-2"></i>Your current produce buying habits</li>
+                            <li class="mb-2"><i class="fas fa-check text-primary me-2"></i>Your interest in a local produce app</li>
+                            <li class="mb-2"><i class="fas fa-check text-primary me-2"></i>Features you'd find most useful</li>
+                        </ul>
+                        <p class="mb-4">Your responses will guide our development and help support local agriculture. Together, we can create a more sustainable and connected local food system!</p>
+                        <div class="text-center">
+                            <a href="https://forms.gle/izSca25JVmVqmyr49" target="_blank" rel="noopener noreferrer" class="btn btn-primary btn-xl text-uppercase">
+                                Take the Survey Now
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <p class="text-muted text-center mt-3">Thank you for your time and valuable feedback!</p>
+            </div>
+        </div>
+    </div>
+</section>
+
 <!-- Download Pitch Deck -->
 <section id="pitch" class="page-section bg-light" id="download">
     <div class="container">
@@ -149,8 +179,6 @@
         </div>
     </div>
 </section>
-
-
 
     <section class="page-section bg-light" id="team">
         <div class="container">
