--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     </header>
 
     <!-- About-->
-    <section class="page-section" id="about">
+    <section class="page-section card-section" id="about">
         <div class="container">
             <div class="card shadow">
                 <div class="card-body">
@@ -87,7 +87,7 @@
     </section>
 
     <!-- Problem -->
-    <section class="page-section" id="problem">
+    <section class="page-section card-section" id="problem">
         <div class="container">
             <div class="card shadow">
                 <div class="card-body">
@@ -149,7 +149,7 @@
         </div>
     </section>
 
-    <section class="page-section bg-light" id="survey">
+    <section class="page-section bg-light card-section" id="survey">
         <div class="container">
             <div class="card shadow">
                 <div class="card-body">
@@ -180,7 +180,7 @@
     </section>
 
     <!-- Download Pitch Deck -->
-    <section id="pitch" class="page-section bg-light">
+    <section id="pitch" class="page-section bg-light card-section">
         <div class="container">
             <div class="card shadow">
                 <div class="card-body">
@@ -197,7 +197,7 @@
         </div>
     </section>
 
-    <section class="page-section bg-light" id="team">
+    <section class="page-section bg-light card-section" id="team">
         <div class="container">
             <div class="card shadow">
                 <div class="card-body">
@@ -228,7 +228,7 @@
         </div>
     </section>
     
-    <section id="contact" class="page-section bg-light">
+    <section id="contact" class="page-section bg-light card-section">
         <div class="container">
             <div class="card shadow">
                 <div class="card-body">
