Update bg color for summarised pitch

--- a/keboon-pitch.html
+++ b/keboon-pitch.html
@@ -10,7 +10,7 @@
             --primary-color: #377E62;
             --secondary-color: #52AE77;
             --text-color: black;
-            --background-color: #d8ffe8;
+            --background-color: #F0F9F4;
         }
         body {
             font-family: 'Arial', sans-serif;
