Adjust button size

--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                             </ul>
                             <p class="mb-4">Your responses will guide our development and help support local agriculture. Together, we can create a more sustainable and connected local food system!</p>
                             <div class="text-center">
-                                <a href="https://forms.gle/izSca25JVmVqmyr49" target="_blank" rel="noopener noreferrer" class="btn btn-primary btn-xl text-uppercase">
+                                <a href="https://forms.gle/izSca25JVmVqmyr49" target="_blank" rel="noopener noreferrer" class="btn btn-primary btn-s text-uppercase">
                                     Take the Survey Now
                                 </a>
                             </div>
@@ -188,8 +188,8 @@
                         <h3 class="section-heading text-uppercase">Download Our Pitch Deck</h3>
                         <h3 class="section-subheading text-muted">Learn more about Keboon's vision and business model</h3>
                         <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
-                            <a href="keboon-pitch.html" class="btn btn-primary btn-xl text-uppercase mb-2" target="_blank">Summarised Pitch</a>
-                            <a href="Keboon-Pitch.pdf" class="btn btn-primary btn-xl text-uppercase mb-2" target="_blank">Detailed Pitch</a>
+                            <a href="keboon-pitch.html" class="btn btn-primary btn-s text-uppercase mb-2" target="_blank">Summarised Pitch</a>
+                            <a href="Keboon-Pitch.pdf" class="btn btn-primary btn-s text-uppercase mb-2" target="_blank">Detailed Pitch</a>
                         </div>
                     </div>
                 </div>
@@ -246,7 +246,7 @@
                                     <textarea class="form-control" placeholder="Your Message *" required="required" name="message"></textarea>
                                 </div>
                                 <div class="text-center">
-                                    <button class="btn btn-primary btn-xl text-uppercase" type="submit">
+                                    <button class="btn btn-primary btn-s text-uppercase" type="submit">
                                         <i class="fas fa-paper-plane me-2"></i>Send Message
                                     </button>
                                 </div>
