--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <div class="card bg-transparent border-0">
                 <div class="card-body text-center">
                     <div class="masthead-subheading">Welcome to Keboon!</div>
-                    <div class="masthead-heading text-uppercase">Connecting Neighbours, <br>Sharing Freshness</div>
+                    <div class="masthead-heading">Connecting Neighbours, <br>Sharing Freshness</div>
                     <p class="masthead-description">Join our community of local producers and consumers to reduce food waste and enjoy fresh, local produce.</p>
                 </div>
             </div>
