--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <div class="card bg-transparent border-0">
                 <div class="card-body text-center">
                     <div class="masthead-subheading">Welcome to Keboon!</div>
-                    <div class="masthead-heading text-uppercase">Connecting Neighbours, <br> Sharing Freshness</div>
+                    <div class="masthead-heading">Connecting Neighbours, <br>Sharing Freshness</div>
                     <p class="masthead-description">Join our community of local producers and consumers to reduce food waste and enjoy fresh, local produce.</p>
                 </div>
             </div>
@@ -197,7 +197,6 @@
         </div>
     </section>
 
-    <!--
     <section class="page-section bg-light card-section" id="team">
         <div class="container">
             <div class="card shadow">
@@ -227,7 +226,7 @@
                 </div>
             </div>
         </div>
-    </section> -->
+    </section>
     
     <section id="contact" class="page-section bg-light card-section">
         <div class="container">
