--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
             <div class="card shadow">
                 <div class="card-body">
                     <div class="text-center">
-                        <h3 class="section-heading text-uppercase">Our Amazing Team</h3>
+                        <h3 class="section-heading text-uppercase">Our Team</h3>
                         <h3 class="section-subheading text-muted">The minds behind Keboon</h3>
                     </div>
                     <div class="row">
