--- a/keboon-pitch.html
+++ b/keboon-pitch.html
@@ -310,7 +310,7 @@
 
     <footer>
         <h2>Contact Us</h2>
-        <p>Email: aimi@keboon.net</p>
+        <p>Website: keboon.net</p>
         <p>Company: Keboon Technology Solution</p>
         <p>Business Registration Number: 003639101-D</p>
     </footer>
