--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <ul class="navbar-nav text-uppercase ms-auto py-4 py-lg-0">
                     <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
                     <li class="nav-item"><a class="nav-link" href="#survey">Survey</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#pitch">Pitch Deck</a></li>
+                    <!-- <li class="nav-item"><a class="nav-link" href="#pitch">Pitch Deck</a></li> -->
                     <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
                     <li class="nav-item"><a class="nav-link" href="https://app.keboon.net">Keboon App</a></li>
                 </ul>
@@ -180,7 +180,7 @@
     </section>
 
     <!-- Download Pitch Deck -->
-    <section id="pitch" class="page-section bg-light card-section">
+    <!--<section id="pitch" class="page-section bg-light card-section">
         <div class="container">
             <div class="card shadow">
                 <div class="card-body">
@@ -195,7 +195,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
     <section class="page-section bg-light card-section" id="team">
         <div class="container">
